# watchMooi

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_errors.txt  watchmooi.conf
.cache/clangd/index/: firebase.cpp.66D5DCC053D8903F.idx  firebase.h.CC260752061AA279.idx  interfaces.h.31D5879DCB433F5F.idx  main.cpp.F11E695F0DA7FB42.idx  player.cpp.2A7554541FE2F5A7.idx  player.h.0FD2595B04A741A4.idx  sync.cpp.CBBDEA1F95B2FD12.idx  sync.h.BFACC8B07972B0DF.idx  tests.cpp.0CBCAB4DBE3A76B1.idx
src/: firebase.cpp  firebase.h  interfaces.h  main.cpp  player.cpp  player.h  sync.cpp  sync.h
tests/: tests.cpp
